GUI: Fix body overflow

--- a/scrollbar.css
+++ b/scrollbar.css
@@ -1,4 +1,4 @@
-* {
+body {
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
